feat(IN-63): AD sync function and code refactoring